--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
-.App {
+/* BODY */
+body {
+  scroll-behavior: smooth;
+}
+
+/* NAVBAR */
+.navbar {
+  overflow: hidden;
+  background-color: white;
+}
+
+.navbar a {
+  float: left;
+  display: block;
   text-align: center;
+  padding: 1rem 1rem;
+  text-decoration: none;
+  font-weight: 900;
+  color: red;
+  cursor: pointer;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: large;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar a:hover {
+  background-color: red;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar a.active {
+  background-color: red;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar .search-container {
+  float: right;
 }
+
+/* SEARCHBOX */
+.pokeball{
+  max-height: 1.5rem;
+  max-width: 1.5rem;
+}
+
+.searchBox {
+  position: absolute;
+  top: -1.1rem;
+  left: 85%;
+  transform:  translate(-50%,50%);
+  background: rgb(85, 91, 87);
+  height: 2rem;
+  border-radius: 3rem;
+  padding: .6rem;
+}
+
+.searchBox:hover > .searchInput {
+  width: 9rem;
+  padding: 0rem .4rem;
+}
+
+.searchBox > .searchButton{
+  background: white;
+}
+
+.searchBox:hover > .searchButton {
+  background: red;
+  color : #6c7b8f;
+}
+
+.searchButton {
+  color: white;
+  float: right;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background: #2f3640;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+}
+
+.searchInput {
+  border:none;
+  background: none;
+  outline:none;
+  float:left;
+  padding: 0;
+  color: white;
+  font-size: 1rem;
+  transition: 0.4s;
+  line-height: 2rem;
+  width: 0rem;
+}
+
+/* HOME */
+.container{
+  display: grid;
+  gap: .1rem .1rem;
+  grid-template-columns: auto auto auto;
+  padding: .2rem;
+}
+
+.detail-img {
+  height: 12rem;
+  margin-top: 1.5rem;
+}
+
+.card-text {
+  font-weight: 900;
+  color: red;
+  cursor: pointer;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: large;
+}
+
+.pkmn-card {
+  border-radius: .8rem;
+  padding: 1rem;
+  border: none;
+  position: relative;
+  margin: .7rem;
+  text-align: center;
+  background:
+    linear-gradient(red 0 0) top    /100% var(--d, 0%) no-repeat,
+    linear-gradient(white 0 0) bottom /100% var(--d, 0%) no-repeat,
+    linear-gradient(to right, rgb(109, 120, 112), rgb(85, 91, 87));
+  transition: 0.5s;
+}
+
+.pkmn-card:hover {
+  --d: 50%;
+  border: solid .4rem black;
+}
+
