--- a/src/App.css
+++ b/src/App.css
@@ -133,3 +133,18 @@ body {
   border: solid .4rem black;
 }
 
+/* PAGINATION */
+.pagination {
+  display: inline-block;
+  position: absolute;
+  top: 100%;
+  left: 35%;
+}
+
+.page-item {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  list-style: none;
+}
